--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,6 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile ('com.google.code.gson:gson:2.2.4')
+
 }
