--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile ('com.google.code.gson:gson:2.2.4')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	runtime('mysql:mysql-connector-java')
 
 }
